--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
 gateway.ip=192.168.1.3
 token.expiration_time = 86400000
-token.secret = lamichhanesecret
+token.secret = lamichhanedaisecret
 login.url.path=/users/login
