--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,8 @@ gateway.ip=192.168.1.3
 token.expiration_time = 86400000
 token.secret = lamichhanedaisecret
 login.url.path=/users/login
+
+spring.rabbitmq.host = localhost
+spring.rabbitmq.port = 5672
+spring.rabbitmq.username = guest
+spring.rabbitmq.password = guest
