--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 gateway.ip=192.168.1.3
 token.expiration_time = 86400000
-token.secret = lamichhanedaisecret
+token.secret = lamichhanechaipilo
 login.url.path=/users/login
 
 spring.rabbitmq.host = localhost
