--- a/users-ws.properties
+++ b/users-ws.properties
@@ -1,1 +1,10 @@
 spring.datasource.url=jdbc:h2:mem:mahesh
+gateway.ip=192.168.1.3
+token.expiration_time = 86400000
+token.secret = lamichhanechaipilo
+login.url.path=/users/login
+
+spring.rabbitmq.host = localhost
+spring.rabbitmq.port = 5672
+spring.rabbitmq.username = guest
+spring.rabbitmq.password = guest
