--- a/users-ws.properties
+++ b/users-ws.properties
@@ -1,1 +1,8 @@
-spring.datasource.url=jdbc:h2:mem:mahesh
+## JDBC Properties
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.username=sys as sysdba
+spring.datasource.password=software
+
+## Hibernate Properties
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.OracleDialect
+spring.jpa.hibernate.ddl-auto= none
