--- a/account-ws.properties
+++ b/account-ws.properties
@@ -5,4 +5,4 @@ spring.datasource.password=software
 
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.OracleDialect
-spring.jpa.hibernate.ddl-auto= none
+spring.jpa.hibernate.ddl-auto= update
