--- a/application.properties
+++ b/application.properties
@@ -9,3 +9,4 @@ spring.rabbitmq.username = guest
 spring.rabbitmq.password = guest
 
 albums.url = http://ALBUMS-WS/users/%s/albums
+albums.exceptions.albums-not-found = Users albums are not found
